# rs-torrent

./: Cargo.toml  README.md
bencode/: Cargo.toml
bencode/src/: bencode.rs  byte_buffer.rs  error.rs  lib.rs  macros.rs  marcos.rs  marshal.rs  parser.rs
peer/: Cargo.toml
peer/src/: error.rs  handshake.rs  lib.rs
shared/src/: bytes.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: parse_torrent.rs  tracker.rs
tests/tests/files/: archlinux-2019.12.01-x86_64.iso.torrent  multiple-file-no-announce.torrent
torrent/: Cargo.toml
torrent/src/: error.rs  lib.rs  parser.rs
torrent/tests/: parse_torrent.rs
torrent/tests/files/: MP3-daily-2022-April-02-Pop-Folk-[rarbg.to].torrent
tracker/: Cargo.toml
tracker/src/: error.rs  lib.rs
